--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
+    background-color: #FFA07A;
     font-family: 'Lato', sans-serif;
 }
 
-header{
+header {
     background-color: #ff0000;
     text-align: center;
     color: #fff;
@@ -18,7 +20,7 @@ header{
     letter-spacing: 1.5px;
 }
 
-nav ul{
+nav ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -27,23 +29,111 @@ nav ul{
     list-style: none;
 }
 
-.Link-header{
+.Link-header {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
 }
 
-main{
+.Link-header:hover {
+    color: yellow;
+    transition: all ease-in-out;
+}
+
+main {
     margin: 50px 30px 0 30px;
 }
 
-.section-1{
-    color: #fff;
-    letter-spacing: 2px;
+.section-1 {
     background-color: #ff0000;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 150px;
+    letter-spacing: 2px;
     margin: 0 auto;
     text-align: center;
-    width: 90%;
-    height: 250px;
     border-radius: 12px;
+    gap: 14px;
+
+    & h2 {
+        font-size: 25px;
+    }
+
+    & p {
+        font-size: 22px;
+    }
+}
+
+.section-2 {
+    background-color: #ff0000;
+    display: flex;
+    flex-direction: column;
+
+    max-width: 100%;
+    width: 30%;
+
+    margin: 20px auto;
+    padding: 10px;
+    gap: 15px;
+    /* padding-bottom: 20px; */
+    border-radius: 12px;
+    text-align: center;
+}
+
+.grid {
+    background-color: #fff;
+    display: grid;
+    max-width: 80%;
+    height: 100%;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-column-gap: 10px;
+    border-radius: 8px;
+    margin: 0 auto;
+    padding: 5px;
+
+    & img {
+        width: 250px;
+        padding: 15px 5px;
+    }   
+
+    & img:hover {
+        scale: 1.07;
+    }
+
+}
+
+.sub-grid {
+    margin: 0 auto;
+    padding: 10%;
+
+    & h2 {
+        color: #ff0000;
+        margin: 10px auto;
+    }
+
+    & p {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    & .btn-action {
+        background-color: red;
+        color: #fff;
+        width: 70%;
+        height: 30px;
+        margin-top: 20px;
+        border-radius: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
+
+    & .btn-action:hover {
+        opacity: 0.6;
+        scale: 1.03;
+    }
 }
